# radicle-interface

./: .eslintignore  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitignore  .nycrc.json  .prettierrc  CODEOWNERS  CONTRIBUTING.md  NOTES  README.md  cypress.config.cjs  cypress.config.ts  cypress.json  eslint.config.js  flake.nix  global.d.ts  index.html  module.d.ts  package-lock.json  package.json  playwright.buildSmoke.config.ts  playwright.config.ts  playwright.ipfs.config.ts  radicle-router.md  snowpack.config.js  svelte.config.js  tsconfig.json  vite.config.ts
config/: custom-environment-variables.json  default.json  test.json
fixtures/: projects.ts  safe.ts
http-client/: index.ts  vite.config.ts
httpd-client/: index.ts  vite.config.ts
public/: app.webmanifest  colors.css  elevations.css  index.css  index.html  layout.css  manifest.json  offline.html  prettylights.css  service-worker.js  sw.js  syntax.css  typography.css
radicle-httpd/: Cargo.toml  LICENSE-MIT
radicle-httpd/src/: api.rs  error.rs  git.rs  lib.rs  main.rs  raw.rs  test.rs
radicle-httpd/src/api/: error.rs  json.rs  query.rs  v1.rs
radicle-httpd/src/api/json/: cobs.rs  commit.rs  diff.rs  thread.rs
radicle-httpd/src/api/v1/: delegates.rs  node.rs  projects.rs  repos.rs  sessions.rs  stats.rs
scripts/: build  check  check-coverage  check-format  copy-katex-assets  create-seed-fixture  create-seed-fixture-heartwood  http-api-test  install-binaries  install-twemoji-assets  run-http-api-with-fixtures  run-httpd-with-fixtures  test  unit-test  update-flake
src/: Address.spec.ts  Address.svelte  App.svelte  Async.svelte  Authorship.svelte  Avatar.svelte  Badge.svelte  BlockTimer.spec.ts  BlockTimer.svelte  Blockies.svelte  Blocky.svelte  Button.svelte  Card.svelte  Cards.svelte  Clipboard.svelte  ColorPalette.svelte  Comment.svelte  Connect.svelte  Diagram.svelte  Dropdown.svelte  Error.spec.ts  Error.svelte  ErrorModal.spec.ts  ErrorModal.svelte  Floating.svelte  Form.svelte  Header.svelte  Icon.svelte  Input.svelte  LinearGradient.svelte  Link.svelte  List.svelte  (+66 more)
(+688 files in other folders)
